tests/specs/ecosystem/trpc/server/0_0_5.test
trpc/server/0.0.5
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/unstable-core-do-not-import/initTRPC.ts:68:3
   | 
68 |   create = <TOptions extends RuntimeConfigOptions<TContext, TMeta>>(
   |   ^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


